--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -39,10 +39,6 @@ $color_mid_cold_grey: #9AA6AB;
 
 $body-bg: $color_neutral_light;
 
-$locale-bg: $color_black;
-$locale-color: $color_mid_grey;
-$locale-hover-color: $color_white;
-
 $body-font-color: $color_neutral_dark;
 $link-color: $color_primary;
 $font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, serif;
@@ -51,17 +47,6 @@ $form_input-bg: $color_white;
 
 $button-bg: $color_custom_green;
 $button-color: $color_white;
-
-$banner_bg: $color_custom_light_grey;
-
-$main_menu-bg: $color_custom_mid_cold_grey;
-$main_menu-search_text: $color_black;
-$main_menu-link_text: $color_white;
-$main_menu-search_bg: $color_custom_teal;
-$main_menu-link_bg: $color_custom_mid_cold_grey;
-$main_menu-active_link_text: $main_menu-link_bg;
-$main_menu-active_link_bg: $body-bg;
-$submenu-color: $color_black;
 
 $footer-bg: $color_black;
 $footer-color: $color_light_grey;
@@ -97,16 +82,14 @@ $action-border: $color_orange;
 /* General styling of nav menu items */
 %menu-item {
   text-decoration: none;
-  background-color: $main_menu-link_bg;
-  color: transparentize($main_menu-link_text, 0.2);
+  color: transparentize($color_white, 0.2);
   @include ie8 {
-    color: $main_menu-link_text;
+    color: $color_white;
   }
   transition: background-color 0.5s ease-out;
-
   &:hover{
-      background-color: darken($main_menu-bg, 5%);
-      color: transparentize($main_menu-link_text, 0);
+    background-color: darken($color_custom_mid_cold_grey, 15%);
+    color: $color_white;
   }
 
 }
@@ -114,22 +97,10 @@ $action-border: $color_orange;
 /* Selected menu item */
 %selected-menu-item {
   font-weight: bold;
-  color: $main_menu-active_link_text;
-  background-color: $main_menu-active_link_bg;
+  color: $color_custom_mid_cold_grey;
+  background-color: $color_neutral_light;
   &:hover{
-      background-color: $main_menu-active_link_bg;
-  }
-}
-
-/* Styling if not part of the main menu on larger screens */
-%sub-menu-item {
-  @include respond-min( $main_menu-mobile_menu_cutoff ){
-    background-color: $banner_bg;
-    color: $submenu-color;
-    &:hover{
-        background-color: $banner_bg;
-        color: transparentize($main_menu-link_text, 0);
-    }
+      background-color: $color_neutral_light;
   }
 }
 
@@ -312,11 +283,11 @@ body:before {
 }
 
 #banner_inner {
-  background-color: $banner-bg;
+  background-color: $color_custom_light_grey;
 }
 
 #topnav {
-  background-color: $main_menu-bg;
+  background-color: $color_custom_mid_cold_grey;
 }
 
 #navigation{
@@ -351,15 +322,12 @@ body:before {
   }
 
   #navigation_search_button{
-    background-color: darken($main_menu-bg, 10%);
+    background-color: $color_white;
     border: none;
     transition: all 0.3s ease-out;
-    color: $main_menu-search_text;
+    color: $color_custom_mid_cold_grey;
     border-radius: 0;
     font-size: inherit;
-    &:focus{
-        background-color: $form_input-bg;
-    }
   }
 }
 
@@ -408,12 +376,18 @@ body:before {
 #logged_in_bar{
   a {
     @extend %menu-item;
-    @extend %sub-menu-item;
+    background-color: transparent;
     font-weight: normal;
+    color: $color_black;
+    &:hover,
+    &:active,
+    &:focus {
+      background-color: transparent;
+    }
   }
   #logged_in_links {
     top: 2em;
-    .greeting, a {
+    a {
       font-weight: normal;
     }
   }
@@ -421,7 +395,7 @@ body:before {
 
 /* LANGUAGE SWITCHER */
 #user_locale_switcher {
-  background-color: $main_menu-bg;
+  background-color: $color_custom_mid_cold_grey;
   @include respond-min($main_menu-mobile_menu_cutoff) {
     background-color: transparent;
     right: auto;
@@ -496,7 +470,7 @@ body:before {
   font-size: 0.8125em;
   @include respond-min($main_menu-mobile_menu_cutoff) {
     position: absolute;
-    top: 30px;
+    top: 2em;
     left: 0;
     z-index: 1000;
     border-radius: 3px;
@@ -508,9 +482,9 @@ body:before {
 
 .locale-list li {
   list-style-type: none;
-  border-bottom: 1px solid desaturate(lighten($main_menu-bg, 3%), 5%);
+  border-bottom: 1px solid desaturate(lighten($color_custom_mid_cold_grey, 3%), 5%);
   @include respond-min($main_menu-mobile_menu_cutoff) {
-    border-bottom-color: darken($color_mid_grey,30%);
+    border-bottom-color: $color_neutral_dark;
     display: block;
   }
   &:last-child {
@@ -528,16 +502,16 @@ body:before {
 .locale-list .available-languages a:link,
 .locale-list .available-languages a:visited {
   display: block;
-  background-color: $main_menu-bg;
+  background-color: $color_custom_mid_cold_grey;
   padding: 0.66em 1em;
   width: 100%;
   text-decoration: none;
-  color: transparentize($main_menu-link_text, 0.2);
+  color: transparentize($color_white, 0.2);
   @include ie8 {
-    color: $main_menu-link_text;
+    color: $color_white;
   }
   @include respond-min($main_menu-mobile_menu_cutoff) {
-    background-color: lighten($color_black, 6%);
+    background-color: lighten($color_neutral_dark, 6%);
   }
   transition: background-color 0.5s ease-out;
 }
@@ -545,9 +519,9 @@ body:before {
 .locale-list .available-languages a:hover,
 .locale-list .available-languages a:focus {
   border-bottom: none;
-  background-color: darken($main_menu-bg, 5%);
+  background-color: darken($color_custom_mid_cold_grey, 5%);
   @include respond-min($main_menu-mobile_menu_cutoff) {
-    background-color: darken($color_mid_grey, 20%);
+    background-color: $color_neutral_dark
   }
   color: $color_white;
 
@@ -560,12 +534,12 @@ body:before {
 }
 
 .locale-list.active .current-locale {
-  background-color: $main_menu-bg;
+  background-color: $color_custom_mid_cold_grey;
   color: $color_white;
-  border-color: $main_menu-bg;
+  border-color: $color_custom_mid_cold_grey;
   @include respond-min($main_menu-mobile_menu_cutoff) {
     background-color: lighten($color_black, 6%);
-    border-color: $color_black;
+    border-bottom: 1px solid lighten($color_neutral_dark, 2%);
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
   }
@@ -591,7 +565,7 @@ body:before {
 
   /* locale border */
   @include respond-min( $main_menu-mobile_menu_cutoff ){
-    border-top: 4px solid $locale-bg;
+    border-top: 4px solid $color_black;
   }
 
   /* Hide the greeting on smaller devices */
@@ -767,7 +741,7 @@ a.link_to_this {
 #link_box {
   font-family: $font-family;
   border-radius: 0;
-  border: 1px solid $color_black-alt;
+  border: 1px solid $color_neutral_dark;
   .close-button {
     background-color: $correspondence-bg;
     float: right;
@@ -827,13 +801,13 @@ a.link_to_this {
 
 .view_html_prefix {
   font-family: $font-family;
-  background-color: $banner-bg;
-  color: transparentize($main_menu-link_text, 0.2);
+  background-color: $color_custom_mid_cold_grey;
+  color: transparentize($color_white, 0.2);
   @include ie8 {
-    color: $main_menu-link_text;
+    color: $color_white;
   }
   a {
-    color: $main_menu-link_text;
+    color: $color_white;
   }
   .view_html_logo, .view_html_description {
     padding-top: 1em;
