--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -212,20 +212,6 @@ input.use-datepicker[type=text] {
   }
 }
 
-@mixin button-quarternary($args...) {
-  @include button-base($args...);
-  background-color: $color_custom_green;
-  color: $color_white;
-  font-weight: normal;
-  &:hover,
-  &:active,
-  &:focus {
-    background-color: darken($color_custom_green, 7.5%);
-    color: $color_white;
-  }
-}
-
-
 form input[type=submit], a.link_button_green, a.link_button_green_large {
   @include button-primary;
   text-decoration: none;
@@ -893,7 +879,7 @@ dt {
   .link_button_green {
     @include button-secondary();
   }
-}  
+}
 
 .authority__body__sidebar form input[type=submit] {
   @include button-secondary();
@@ -916,7 +902,15 @@ dt {
   }
 
   .new-request__make-new-requests {
-    @include button-quarternary;
+    @include button-base;
+    background-color: $color_custom_green;
+    color: $color_white;
+    &:hover,
+    &:active,
+    &:focus {
+      background-color: darken($color_custom_green, 10%);
+      color: $color_white;
+    }
   }
 }
 
