--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -1,5 +1,5 @@
 $color_sand: #f3f1eb;
-$color_slate: #333333;
+$color_black: #333333;
 $color_orange: #f4a140;
 $color_blue: #4faded;
 $color_green: #62b356;
@@ -17,12 +17,12 @@ $color_custom_light_grey: #C8C9CB;
 $color_custom_mid_cold_grey: #a1a2a6;
 
 $color_sand: #f3f1eb;
-$color_slate: #333333;
+$color_black: #333333;
 $color_green: #62b356;
 $color_white: #ffffff;
 
 $color_neutral_light: $color_sand;
-$color_neutral_dark: $color_slate;
+$color_neutral_dark: $color_black;
 $color_primary: $color_custom_blue;
 $color_secondary: $color_custom_yellow;
 
@@ -186,21 +186,21 @@ input.use-datepicker[type=text] {
 @mixin button-secondary($args...) {
   @include button-base($args...);
     background-color: desaturate(darken($color_sand, 10%), 5%);
-    color: $color_slate;
+    color: $color_black;
     font-weight: normal;
     &:hover,
     &:active,
     &:focus {
-      color: $color_slate;
+      color: $color_black;
       background-color:  desaturate(darken($color_sand, 15%), 5%);
-      color: $color_slate;
+      color: $color_black;
     }
 }
 
 @mixin button-tertiary($args...) {
   @include button-base($args...);
   background-color: desaturate(darken($color_sand, 5%), 5%);;
-  color: $color_slate;
+  color: $color_black;
   font-weight: normal;
   border: 1px solid desaturate(darken($color_sand, 15%),5%);
   &:hover,
@@ -338,7 +338,7 @@ body:before {
     @extend %menu-item;
     background-color: transparent;
     font-weight: normal;
-    color: $color_slate;
+    color: $color_black;
     &:hover,
     &:active,
     &:focus {
@@ -378,7 +378,7 @@ body:before {
     @include respond-min($main_menu-mobile_menu_cutoff) {
       margin-top: 0;
       border-radius: 3px;
-      background-color: $color_slate;
+      background-color: $color_black;
       color: $color_white;
       padding: 0;
     }
@@ -525,7 +525,7 @@ body:before {
 
   /* locale border */
   @include respond-min( $main_menu-mobile_menu_cutoff ){
-    border-top: 4px solid $color_slate;
+    border-top: 4px solid $color_black;
   }
 
   /* Hide the greeting on smaller devices */
@@ -605,7 +605,7 @@ body:before {
     }
   }
   h1,h2,h3,h4,h5,h6 {
-    color: lighten($color_slate, 20%);
+    color: lighten($color_black, 20%);
   }
   h1:first-child,
   h2:first-child,
@@ -654,14 +654,14 @@ body:before {
 
 .footer__final {
   .row {
-    border-top: 1px solid lighten($color_slate, 6%);
+    border-top: 1px solid lighten($color_black, 6%);
   }
 }
 
 /* Request page */
 div.correspondence {
   background-color: $color_white;
-  box-shadow: 0 2px 2px transparentize($color_slate, 0.8);
+  box-shadow: 0 2px 2px transparentize($color_black, 0.8);
   border: none;
   border-radius: 5px;
   margin-bottom: 2em;
@@ -827,7 +827,7 @@ dt {
 .steps__step-box {
   background-color: $color_white;
   padding: 2em;
-  box-shadow: 0 1px 2px transparentize($color_slate, 0.75);
+  box-shadow: 0 1px 2px transparentize($color_black, 0.75);
   @include respond-min( $main_menu-mobile_menu_cutoff ){
     min-height: 11em;
   }
@@ -841,7 +841,7 @@ dt {
   height: 3.5em;
   width: 3.5em;
   background-color: $color_primary;
-  box-shadow: 0 1px 2px transparentize($color_slate, 0.75);
+  box-shadow: 0 1px 2px transparentize($color_black, 0.75);
   padding: 1em;
   border-radius: 100%;
   color: $color_white;
@@ -885,7 +885,7 @@ dt {
 }
 
 .homepage-hero {
-  color: $color_slate;
+  color: $color_black;
   padding: 2em 0 5em;
   position: relative;
   @include respond-min($main_menu-mobile_menu_cutoff) {
@@ -896,7 +896,7 @@ dt {
     &:hover,
     &:active,
     &:focus {
-      color: $color_slate;
+      color: $color_black;
     }
   }
 
@@ -914,8 +914,8 @@ dt {
 }
 
 .intro__title {
-  color: $color_slate;
-  text-shadow: 0 1px 2px transparentize($color_slate, 0.7);
+  color: $color_black;
+  text-shadow: 0 1px 2px transparentize($color_black, 0.7);
 }
 
 .new-request__content {
@@ -925,15 +925,15 @@ dt {
 }
 
 .new-request__title {
-  color: $color_slate;
+  color: $color_black;
   font-size: 1.4375em;
   margin: 0 0 0.5em;
 }
 
 .new-request__description {
-  color: transparentize($color_slate, 0.2);
+  color: transparentize($color_black, 0.2);
   @include ie8 {
-    color: $color_slate;
+    color: $color_black;
   }
 }
 
