--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -250,6 +250,19 @@ body:before {
   background-color: $color_custom_mid_cold_grey;
 }
 
+.site-title__logo {
+  // Smaller logo on mobiles
+  width: ($logo-width / 2);
+  height: ($logo-height / 2);
+  background-size: ($logo-width / 2) ($logo-height / 2);
+
+  @include respond-min( $main_menu-mobile_menu_cutoff ){
+    width: $logo-width;
+    height: $logo-height;
+    background-size: $logo-width $logo-height;
+  }
+}
+
 #navigation{
   border-bottom: none;
   a {
@@ -534,9 +547,8 @@ body:before {
 
   .rsp_menu_button{
     position: absolute;
-    top: 0;
-    /* 15px for margin minus 9 for background offset*/
-    right: 4px;
+    top: 5px; // vertically centre the button in the header
+    right: 4px; // 15px for margin minus 9 for background offset
     @extend .image-replacement;
     background-image: image-url('hamburger.png');
     background-repeat: no-repeat;
@@ -549,6 +561,13 @@ body:before {
     a {
       width: 100%;
       height: 100%;
+    }
+  }
+
+  &:target {
+    .rsp_menu_button {
+      top: 5px;
+      right: 4px;
     }
   }
 
