--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -346,6 +346,10 @@ body:before {
 
 /* Logged and local options act like submenus */
 #logged_in_bar{
+  @include respond-min($main_menu-mobile_menu_cutoff) {
+    top: 0;
+  }
+
   a {
     @extend %menu-item;
     background-color: transparent;
@@ -358,7 +362,6 @@ body:before {
     }
   }
   #logged_in_links {
-    top: 2em;
     a {
       font-weight: normal;
     }
