--- a/assets/stylesheets/responsive/custom.scss
+++ b/assets/stylesheets/responsive/custom.scss
@@ -1,70 +1,16 @@
-$locale-bg: #333;
-$locale-color: #999999;
-$locale-hover-color: #fff;
-$link-color: #5378BF;
-$body-font-color: #333;
-$body-bg: #f3f1eb;
-$button-bg: #6EA942;
-$button-color: #fff;
-$heading-color: #3d3b38;
-$font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, serif;
-$sans-serif-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-
-$banner_bg: #C8C9CB;
-$main_menu-bg: darken($banner_bg, 15%);
-$main_menu-search_text: #333;
-$main_menu-link_text: #fff;
-$main_menu-search_bg: #67848c;
-$submenu-color: #333;
-
-$main_menu-link_bg: darken($banner_bg, 15%);
-$main_menu-active_link_text: $main_menu-link_bg;
-$main_menu-active_link_bg: $body-bg;
-
-$footer-bg: #333;
-$footer-color: #ccc;
-$footer-link-color: #fff;
-
-$incoming-correspondence-color: #EDDF29;
-$outgoing-correspondence-color: #5378BF;
-$correspondence-bg: #fff;
-$correspondence-shadow: #d3d3d3;
-
-$status-success: #aab26e;
-$status-failure: #ff7959;
-$status-pending: #e69e5d;
-
-$notice-bg: #D7DABD;
-$notice-border: #839310;
-
-$error-bg: #ebc3a9;
-$error-border: #a1432c;
-
-$action-bg: #edd3b8;
-$action-border: #d69457;
-
-/* Mixin styles */
-
-/* Hide text when it's replaced by an image */
-.image-replacement {
-  overflow: hidden;
-  text-indent: 150%;
-  white-space: nowrap;
-}
-
 /* General styling of nav menu items */
 %menu-item {
   text-decoration: none;
-  background-color: $main_menu-link_bg;
-  color: transparentize($main_menu-link_text, 0.2);
+  background-color: $topnav_bg;
+  color: transparentize($color_white, 0.2);
   @include ie8 {
-    color: $main_menu-link_text;
+    color: $color_white;
   }
   transition: background-color 0.5s ease-out;
 
   &:hover{
-      background-color: darken($main_menu-bg, 5%);
-      color: transparentize($main_menu-link_text, 0);
+      background-color: darken($topnav_bg, 5%);
+      color: transparentize($color_white, 0);
   }
 
 }
@@ -72,21 +18,21 @@ $action-border: #d69457;
 /* Selected menu item */
 %selected-menu-item {
   font-weight: bold;
-  color: $main_menu-active_link_text;
-  background-color: $main_menu-active_link_bg;
+  color: darken($color_sobanukirwa_palegrey, 15%);
+  background-color: $color_sand;
   &:hover{
-      background-color: $main_menu-active_link_bg;
+      background-color: $color_sand;
   }
 }
 
 /* Styling if not part of the main menu on larger screens */
 %sub-menu-item {
   @include respond-min( $main_menu-mobile_menu_cutoff ){
-    background-color: $banner_bg;
-    color: $submenu-color;
+    background-color: $color_sobanukirwa_palegrey;
+    color: $color_white;
     &:hover{
-        background-color: $banner_bg;
-        color: transparentize($main_menu-link_text, 0);
+        background-color: $color_sobanukirwa_palegrey;
+        color: transparentize($color_white, 0);
     }
   }
 }
@@ -106,7 +52,7 @@ a{
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: $heading-color;
+  color: $color_black;
   font-family: $font-family;
 }
 
@@ -126,7 +72,7 @@ form input[type="url"],
 form input[type="tel"],
 form input[type="number"] {
     border-radius: 0;
-    background-color: $main_menu-link_text;
+    background-color: $color_white;
     /* Set a fixed height for text inputs in older IE 8 */
     @include ie8{
         height: 2.3125em;
@@ -139,7 +85,7 @@ form input[type="number"] {
 
 input.use-datepicker[type=text] {
   width: 130px;
-  background:image-url('calendar.png') no-repeat 100px 5px $main_menu-link_text;
+  background:image-url('calendar.png') no-repeat 100px 5px $color_white;
 }
 
 form input[type=submit], a.link_button_green, a.link_button_green_large {
@@ -198,8 +144,8 @@ a.link_button_green_large {
 /* Popups */
 
 .popup {
-  background-color: $notice-bg;
-  border: 3px solid $notice-border;
+  background-color: $color_sobanukirwa_darksand;
+  border: 3px solid $color_sobanukirwa_darkgreen;
 }
 
 
@@ -219,11 +165,11 @@ body:before {
 }
 
 #banner_inner {
-  background-color: $banner-bg;
+  background-color: $color_sobanukirwa_palegrey;
 }
 
 #topnav {
-  background-color: $main_menu-bg;
+  background-color: darken($color_sobanukirwa_palegrey, 15%);
 }
 
 #navigation{
@@ -258,14 +204,27 @@ body:before {
   }
 
   #navigation_search_button{
-    background-color: darken($main_menu-bg, 10%);
+    background-color: darken($color_sobanukirwa_palegrey, 25%);
     border: none;
     transition: all 0.3s ease-out;
-    color: $main_menu-search_text;
+    color: $color_sobanukirwa_lightgrey;
     border-radius: 0;
     font-size: inherit;
+    &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+      color: $color_sobanukirwa_lightgrey;
+    }
+    &::-moz-placeholder { /* Firefox 19+ */
+      color: $color_sobanukirwa_lightgrey;
+    }
+    &:-ms-input-placeholder { /* IE 10+ */
+      color: $color_sobanukirwa_lightgrey;
+    }
+    &:-moz-placeholder { /* Firefox 18- */
+      color: $color_sobanukirwa_lightgrey;
+    }
     &:focus{
-        background-color: $main_menu-link_text;
+        background-color: $color_white;
+        color: $color_black;
     }
   }
 }
@@ -296,19 +255,19 @@ body:before {
 }
 
 #notice, #request_header_text {
-  background-color: $notice-bg;
-  border-color: $notice-border;
+  background-color: $color_sobanukirwa_darksand;
+  border-color: $color_sobanukirwa_darkgreen;
 }
 
 #error, .errorExplanation, #hidden_request {
-  background-color: $error-bg;
-  border-color: $error-border;
+  background-color: $color_sobanukirwa_lightpink;
+  border-color: $color_sobanukirwa_darkred;
 
 }
 
 .undescribed_requests {
-  background-color: $action-bg;
-  border-color: $action-border;
+  background-color: $color_sobanukirwa_paleorange;
+  border-color: $color_soubankirwa_mutedorange;
 }
 
 /* Logged and local options act like submenus */
@@ -317,6 +276,7 @@ body:before {
     @extend %menu-item;
     @extend %sub-menu-item;
     font-weight: normal;
+    color: $color_sobanukirwa_darkgrey;
   }
   #logged_in_links {
     top: 4em;
@@ -331,23 +291,24 @@ body:before {
     background-image: image-url('locale-switcher.png');
     background-repeat: no-repeat;
     background-position: 0.5em 0.5em;
-    background-color: $locale-bg;
+    background-color: $color_sobanukirwa_darkgrey;
     border-radius: 0 0 1.25em 1.25em;
     font-size: 0.82em;
     padding: 0 1em 0 2.5em;
     right: 15px;
   }
-  a {
+  p, a {
+    strong { font-weight: normal; }
     @extend %menu-item;
     font-family: $sans-serif-font-family;
     @include respond-min( $main_menu-mobile_menu_cutoff ){
       padding: 0.5em 0.2em;
-      background-color: $locale-bg;
+      background-color: $color_sobanukirwa_darkgrey;
       border-radius: 0 0 1.25em 1.25em;
-      color: $locale-color;
+      color: $color_sobanukirwa_midgrey;
       &:hover{
-          background-color: $locale-bg;
-          color: $locale-hover-color;
+          background-color: $color_sobanukirwa_darkgrey;
+          color: $color_white;
       }
     }
   }
@@ -358,7 +319,7 @@ body:before {
 
   /* locale border */
   @include respond-min( $main_menu-mobile_menu_cutoff ){
-    border-top: 4px solid $locale-bg;
+    border-top: 4px solid $color_sobanukirwa_darkgrey;
   }
 
   /* Hide the greeting on smaller devices */
@@ -424,17 +385,17 @@ body:before {
 
 /* Footer */
 #footer {
-  background-color: $footer-bg;
-  color: $footer-color;
+  background-color: $color_sobanukirwa_darkgrey;
+  color: $color_sobanukirwa_grey;
   font-family: $sans-serif-font-family;
   font-size: 1em;
   padding: 2em 4em;
   a {
     text-decoration: none;
-    color: $footer-link-color;
+    color: $color_white;
   }
   h1,h2,h3,h4,h5,h6 {
-    color: lighten($heading-color, 15%);
+    color: lighten($color_black, 15%);
   }
   h1:first-child,
   h2:first-child,
@@ -471,29 +432,29 @@ body:before {
 
 /* Request page */
 div.correspondence {
-  background-color: $correspondence-bg;
+  background-color: $color_white;
 }
 
 .incoming.correspondence {
   border: none;
-  border-top: 8px solid $incoming-correspondence-color;
-  box-shadow: 0 3px 3px $correspondence-shadow;
+  border-top: 8px solid $color_sobanukirwa_yellow;
+  box-shadow: 0 3px 3px $color_sobanukirwa_lightgrey;
   font-family: "Courier New", Courier, monospace;
   font-size: 0.9rem;
   @include ie8 {
     font-size: 0.9em;
   }
   a.link_to_this {
-    background-color: $incoming-correspondence-color;
+    background-color: $color_sobanukirwa_yellow;
   }
 }
 
 .outgoing.correspondence {
   border: none;
-  border-top: 8px solid $outgoing-correspondence-color;
-  box-shadow: 0 3px 3px $correspondence-shadow;
+  border-top: 8px solid $color_sobanukirwa_blue;
+  box-shadow: 0 3px 3px $color_sobanukirwa_lightgrey;
   a.link_to_this {
-    background-color: $outgoing-correspondence-color;
+    background-color: $color_sobanukirwa_blue;
   }
 }
 
@@ -517,9 +478,9 @@ a.link_to_this {
 #link_box {
   font-family: $font-family;
   border-radius: 0;
-  border: 1px solid $heading-color;
+  border: 1px solid $color_black;
   .close-button {
-    background-color: $correspondence-bg;
+    background-color: $color_white;
     float: right;
   }
 }
@@ -528,13 +489,13 @@ a.link_to_this {
   padding: 0;
 
   form{
-    background-color: $action-bg;
-    border-color: $action-border;
+    background-color: $color_sobanukirwa_paleorange;
+    border-color: $color_soubankirwa_mutedorange;
     h2 {
       margin-top: 0;
     }
     hr {
-      border-color: $action-border;
+      border-color: $color_soubankirwa_mutedorange;
     }
   }
 }
@@ -569,13 +530,13 @@ a.link_to_this {
 
 .view_html_prefix {
   font-family: $font-family;
-  background-color: $banner-bg;
-  color: transparentize($main_menu-link_text, 0.2);
+  background-color: $color_sobanukirwa_palegrey;
+  color: transparentize($color_white, 0.2);
   @include ie8 {
-    color: $main_menu-link_text;
+    color: $color_white;
   }
   a {
-    color: $main_menu-link_text;
+    color: $color_white;
   }
   .view_html_logo, .view_html_description {
     padding-top: 1em;
@@ -592,7 +553,7 @@ a.link_to_this {
 /* Help pages */
 
 dt {
-  color: $heading-color;
+  color: $color_black;
   font-weight: 700;
   @include respond-min( $main_menu-mobile_menu_cutoff ){
     font-size: 2em;
