--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -1,49 +1,3 @@
-$color_sand: #f3f1eb;
-$color_black: #333333;
-$color_orange: #f4a140;
-$color_blue: #4faded;
-$color_green: #62b356;
-$color_yellow: #ffd836;
-$color_red: #e04b4b;
-$color_violet: #a94ca6;
-$color_purple: #5c377f;
-$color_white: #ffffff;
-
-$color_custom_blue: #5378BF;
-$color_custom_yellow: #EDDF29;
-$color_custom_green: #6EA942;
-$color_custom_teal: #67848c;
-$color_custom_light_grey: #C8C9CB;
-$color_custom_mid_cold_grey: #a1a2a6;
-
-$color_sand: #f3f1eb;
-$color_black: #333333;
-$color_green: #62b356;
-$color_white: #ffffff;
-
-$color_neutral_light: $color_sand;
-$color_neutral_dark: $color_black;
-$color_primary: $color_custom_blue;
-$color_secondary: $color_custom_yellow;
-
-$body-bg: $color_neutral_light;
-
-$body-font-color: $color_neutral_dark;
-$link-color: $color_primary;
-$action-color: $color_custom_green;
-$font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
-$form_input-bg: $color_white;
-
-$button-bg: darken($color_green, 10%);
-$button-color: $color_white;
-
-$status-success: darken($color_green, 18%);
-$status-failure: darken($color_red, 10%);
-$status-pending: darken($color_orange, 28%);
-
-$notice-color: $color_green;
-$error-color: $color_red;
-$action-color: $color_orange;
 
 /* Mixin styles */
 
@@ -243,11 +197,11 @@ body:before {
 }
 
 #banner_inner {
-  background-color: $color_custom_light_grey;
+  background-color: $banner_inner_bg;
 }
 
 #topnav {
-  background-color: $color_custom_mid_cold_grey;
+  background-color: $topnav_bg;
 }
 
 .site-title__logo {
