--- a/assets/stylesheets/responsive/custom.scss
+++ b/assets/stylesheets/responsive/custom.scss
@@ -294,41 +294,174 @@ body:before {
   }
 }
 
+/* LANGUAGE SWITCHER */
 #user_locale_switcher {
-  @include respond-min( $main_menu-mobile_menu_cutoff ){
-    background-image: image-url('locale-switcher.png');
-    background-repeat: no-repeat;
-    background-position: 0.5em 0.5em;
-    background-color: $color_sobanukirwa_darkgrey;
-    border-radius: 0 0 1.25em 1.25em;
-    font-size: 0.82em;
-    padding: 0 1em 0 2.5em;
-    right: 15px;
+  background-color: $color_primary;
+  @include respond-min($main_menu-mobile_menu_cutoff) {
+    background-color: transparent;
   }
-  p, a {
-    strong { font-weight: normal; }
-    @extend %menu-item;
-    font-family: $sans-serif-font-family;
-    @include respond-min( $main_menu-mobile_menu_cutoff ){
-      padding: 0.5em 0.2em;
-      background-color: $color_sobanukirwa_darkgrey;
-      border-radius: 0 0 1.25em 1.25em;
-      color: $color_sobanukirwa_midgrey;
-      &:hover{
-          background-color: $color_sobanukirwa_darkgrey;
-          color: $color_white;
+}
+
+/* Dropdown list for switching locale */
+.locale-list {
+  border-bottom: 0;
+  @include respond-min($main_menu-mobile_menu_cutoff) {
+    position: absolute;
+    left: ($logo-width + 40px);
+    top: 3em;
+    right: auto;
+  }
+  .locale-list-trigger {
+    margin-bottom: 0;
+    color: $color_black;
+    color: transparentize($color_black, 0.8);
+    @include respond-min($main_menu-mobile_menu_cutoff) {
+      margin-top: 0;
+      border: 1px solid transparentize($color_white, 0.6);
+      border-radius: 3px;
+      color: $link-color;
+      padding: 0;
+    }
+  }
+}
+
+.locale-list-trigger .current-locale {
+  position: relative;
+  z-index: 999;
+  border-radius: 3px;
+  color: $color_black;
+  min-width: 7.75em;
+  @include respond-min($main_menu-mobile_menu_cutoff) {
+    padding: 0.66em 2em 0.66em 0.66em;
+  }
+}
+
+.locale-list-trigger .current-locale:after {
+  display: block;
+  position: absolute;
+  content: '';
+  right: 10px;
+  top: 12px;
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  @include ie8 {
+    border-top: 5px solid $color_white;
+  }
+  border-top: 5px solid transparentize($color_white, 0.6);
+}
+
+.locale-list-trigger .current-locale,
+.locale-list .available-languages a {
+  display: block;
+  cursor: pointer;
+  font-weight: normal;
+  @include respond-min($main_menu-mobile_menu_cutoff) {
+    font-size: 0.8125em;
+    line-height: 1em;
+  }
+}
+
+.locale-list .available-languages {
+  display: none;
+  padding: 0;
+  margin-bottom: 0;
+  margin-top: 0;
+  font-size: 0.8125em;
+  @include respond-min($main_menu-mobile_menu_cutoff) {
+    position: absolute;
+    top: 2em;
+    left: 0;
+    z-index: 1000;
+    border-radius: 3px;
+    font-size: 1em;
+    min-width: 100%;
+  }
+
+}
+
+.locale-list li {
+  list-style-type: none;
+  border-bottom: 1px solid desaturate(lighten($color_primary, 3%), 5%);
+  @include respond-min($main_menu-mobile_menu_cutoff) {
+    border-bottom-color: $color_neutral_dark;
+    display: block;
+  }
+  &:last-child {
+    @include respond-min($main_menu-mobile_menu_cutoff) {
+      border-bottom: 0;
+      a {
+        border-bottom-right-radius: 3px;
+        border-bottom-left-radius: 3px;
       }
     }
   }
 }
 
+.locale-list .available-languages a,
+.locale-list .available-languages a:link,
+.locale-list .available-languages a:visited {
+  display: block;
+  background-color: $color_primary;
+  padding: 0.66em 1em;
+  width: 100%;
+  text-decoration: none;
+  color: transparentize($color_white, 0.2);
+  @include ie8 {
+    color: $color_white;
+  }
+  @include respond-min($main_menu-mobile_menu_cutoff) {
+    background-color: lighten($color_neutral_dark, 6%);
+  }
+  transition: background-color 0.5s ease-out;
+}
+
+.locale-list .available-languages a:hover,
+.locale-list .available-languages a:focus {
+  border-bottom: none;
+  background-color: darken($color_primary, 5%);
+  @include respond-min($main_menu-mobile_menu_cutoff) {
+    background-color: $color_neutral_dark
+  }
+  color: $color_white;
+
+}
+
+/* JS interactivity */
+.no-js .locale-list .available-languages,
+.locale-list.active .available-languages {
+  display: block;
+}
+
+.locale-list.active .current-locale {
+  background-color: $color_primary;
+  color: $color_white;
+  border-color: $color_primary;
+  @include respond-min($main_menu-mobile_menu_cutoff) {
+    background-color: lighten($color_neutral_dark, 6%);
+    border-bottom: 1px solid lighten($color_neutral_dark, 2%);
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+}
+
+.locale-list.active .current-locale:after {
+  @include ie8 {
+    border-top-color: $color_white;
+  }
+  border-top-color: transparentize($color_white, 0.6);
+}
+
+
+.locale-list.active .locale-list-trigger {
+  border-color: transparent;
+  @include respond-min($main_menu-mobile_menu_cutoff) {
+    border-color: $color_neutral_dark;
+  }
+}
 
 #banner {
-
-  /* locale border */
-  @include respond-min( $main_menu-mobile_menu_cutoff ){
-    border-top: 4px solid $color_sobanukirwa_darkgrey;
-  }
 
   .banner_site-title {
     padding: 1em;
