--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -599,6 +599,23 @@ body:before {
 }
 
 /* Request page */
+.request-header__action-bar__actions {
+  .action-menu__button {
+    @include button-secondary();
+  }
+
+  .action-bar__follow-button {
+    .track__action {
+      @include button-primary();
+    }
+  }
+
+  .action-bar__follower-count {
+    padding: 3px;
+    font-size: 1.1rem;
+  }
+}
+
 div.correspondence {
   background-color: $color_white;
   box-shadow: 0 2px 2px transparentize($color_black, 0.8);
