--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -16,7 +16,9 @@
     color: $color_white;
   }
   transition: background-color 0.5s ease-out;
-  &:hover{
+  &:hover,
+  &:active,
+  &:focus {
     background-color: darken($color_custom_mid_cold_grey, 15%);
     color: $color_white;
   }
@@ -28,8 +30,10 @@
   font-weight: bold;
   color: $color_custom_mid_cold_grey;
   background-color: $color_neutral_light;
-  &:hover{
-      background-color: $color_neutral_light;
+  &:hover,
+  &:active,
+  &:focus {
+    background-color: $color_neutral_light;
   }
 }
 
